# paircosine

./: .gitignore  README.md  flops.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/paircosine/: __init__.py  cosine.py  minimize.py
src/subpair/: __init__.py  attention.py  cosine.py  flops.py  minimize.py
tests/: test_cosine.py  test_minimize.py
