[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paircosine"
version = "0.2.1"
description = "TODO"
readme = "README.md"
authors = [{ name = "lfrati", email = "lfrati.github@gmail.com" }]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["numerical"]
dependencies = ["numpy", "numba", "tqdm"]
requires-python = ">=3.9"

    [project.scripts]
        stega = "paircosine.__main__:main"

    [project.optional-dependencies]
    dev = ["tqdm", "bumpver", "pip-tools", "build", "twine", "pytest"]

    [project.urls]
    Homepage = "https://github.com/lfrati/paircosine"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
filterwarnings = [
    "error",
    # note the use of single quote below to denote "raw" strings in TOML
    # https://github.com/numba/numba/issues/8095
    # https://github.com/gmarkall/numba/commit/215bcba66f4999ad3aa2ca746e4df9feac45c7d3
    'ignore:invalid escape sequence \\|:DeprecationWarning',
    # https://numba.readthedocs.io/en/stable/reference/deprecation.html#expected-replacement
    'ignore::numba.NumbaPendingDeprecationWarning'
]


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/stegaplots/__init__.py" = ["{version}"]
